# Rest_API_RUST_SINGLETON

./: .env  Cargo.toml  README.md
migrations/: 20240601173616_user.down.sql  20240601173616_user.up.sql  20240601173938_task.down.sql  20240601173938_task.up.sql
src/: main.rs
src/config/: db_config.rs  mod.rs  validator_config.rs
src/controller/: task_controller.rs  user_controller.rs
src/gql/resolver/: mod.rs
src/gql/resolver/task/: mod.rs  task_resolver.rs
src/gql/resolver/user/: mod.rs  user_query.rs  user_resolver.rs
src/gql/schema/: mod.rs  response_schema.rs  task_schema.rs  user_schema.rs
src/model/: task_model.rs  user_model.rs
