[package]
name = "backend-test"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "7.0.5", features = ["chrono"] }
async-graphql-axum = "7.0.5"
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
futures = { version = "0.3.30", default-features = false, features = [
    "async-await",
] }
lazy_static = "1.4.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
sqlx = { version = "0.7.4", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "chrono",
] }
quick_cache = "0.5.1"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
